# paysage-classification

./: .gitignore  README.MD  README.md  classifier.py  config.yaml  dataset.py  dataset_check.py  environment.yml  inference.py  labels.txt  log_to_mlflow.py  main.py  preprocess.py  pyproject.toml  samples.py  scene_classifier.py  test.py  train.py  visualize.py
.dvc/: config
.github/workflows/: main.yml
paysage_classification/: __init__.py  inference.py  train.py  visualize.py
paysage_classification/dataset/: samples.py  splitter.py
