[tool.poetry]
name = "paysage-classifier-poetry"
version = "0.1.0"
description = "Landscape image classification"
authors = ["Andrey <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

torch = "^2.5.0"
torchvision = "^0.20.0"
torchaudio = "^2.5.0"

numpy = "^2.0.0"
scipy = "^1.16.0"
pandas = "^2.3.0"
bottleneck = "^1.4.0"
matplotlib = "^3.10.0"
networkx = "^3.5.0"
tqdm = "^4.67.0"

scikit-learn = "^1.7.0"
joblib = "^1.5.0"
threadpoolctl = "^3.6.0"

pillow = "^11.0.0"
requests = "^2.32.0"
fsspec = "^2025.10.0"
kaggle = "^1.7.4"
python-slugify = "^8.0.4"
pyyaml = "^6.0.0"
jinja2 = "^3.1.0"
# sympy = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^24.0.0"
mypy = "^1.10.0"

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = true # А мне 'одинарные кавычки' дороже автоформатирования!

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
